# Claude-TEST

./: .env.example  .gitignore  README.md  pyproject.toml
src/it_agent/: config.py  main.py
src/it_agent/agent/: core.py  executor.py  tools.py
src/it_agent/bot/: app.py  formatters.py  handlers.py
src/it_agent/db/: database.py  models.py  queries.py
src/it_agent/docs/: email-troubleshooting.md  new-employee-setup.md  password-reset.md  vpn-setup.md  wifi-network.md
src/it_agent/knowledge/: indexer.py  store.py
src/it_agent/tools/: diagnostics.py  knowledge.py  tickets.py
tests/: test_diagnostics.py  test_formatters.py  test_knowledge.py  test_tickets.py  test_tools_schema.py
