[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "it-agent"
version = "0.1.0"
description = "IT Support AI Agent powered by Claude"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.39.0",
    "slack-bolt>=1.20.0",
    "slack-sdk>=3.33.0",
    "chromadb>=0.5.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.5.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[project.scripts]
it-agent = "it_agent.main:main"
it-agent-index = "it_agent.knowledge.indexer:main"

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/it_agent"]
